--- a/src/views/trangchu.ejs
+++ b/src/views/trangchu.ejs
@@ -49,7 +49,7 @@
           <td><%= data[i].updatedAt %></td>
             <td>
                 <a href="/edit-crud?id=<%= data[i].id %>" class="btn">sửa</a>
-                <a href="" class="btn">xóa</a>
+                <a href="/delete-crud?id=<%= data[i].id %>" class="btn">xóa</a>
             </td>
         </tr>
         <% } %>
